# internal/controller/account/login_controller.go
@@ -24,13 +24,13 @@ func (c *cUserLogin) Login(ctx *gin.Context) {
 	response.SuccessResponse(ctx, response.ErrCodeSuccess, nil)
 }
 
-// User Registration doccumentation
+// Register Registration doccumentation
 // @Summary      User Registration
 // @Description  When user is registered send otp to email
 // @Tags         accounts management
 // @Accept       json
 // @Produce      json
-// @Param		Payload body model.RegisterInput true ""payload
+// @Param		 payload body model.RegisterInput true "payload"
 // @Success      200  {object}  response.ResponseData
 // @Failure      500  {object}  response.ErrorResponseData
 // @Router       /user/register [post]
